--- a/css/blocks/video.scss
+++ b/css/blocks/video.scss
@@ -31,6 +31,25 @@
     bottom: -70px;
     left: 90px;
   }
+  @include tablets {
+    &:after {
+      top:-75px;
+      right: 15px;
+    }
+
+    &:before {
+      bottom: 75px;
+      left: -25px;
+    }
+  }
+  @include phones {
+    &:before {
+      bottom: -80px;
+    }
+    &:after {
+      right: -30px;
+    }
+  }
 
 }
 
@@ -46,6 +65,11 @@
   left: 307px;
   top: 149px;
   cursor: pointer;
+  @include phones {
+    max-width: 60px;
+    left: 175px;
+    top: 75px;
+  }
 }
 .video__player-img--active{
   opacity:0;
@@ -56,6 +80,11 @@
   max-width: 660px;
   min-height: 370px;
   max-height: 370px;
+  @include phones {
+    min-width: 0;
+    max-width: 400px;
+    min-height: 0;
+  }
 }
 
 .video__toolbar {
@@ -65,6 +94,9 @@
   background-color: #3e3e3e;
   margin-top: -8px;
   display: flex;
+  @include phones {
+    max-width: 400px;
+  }
 }
 
 
