--- a/css/blocks/sizes.scss
+++ b/css/blocks/sizes.scss
@@ -25,10 +25,20 @@
 }
 
 .sizes__item-title {
-  filter: brightness(20%);
+  //filter: brightness(20%);
   position: relative;
   min-width: 90px;
   height: 100%;
+  &:after {
+    position: absolute;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+
+    background: rgba(0,0,0,0.55);
+    //filter: brightness(60%);
+  }
 
 }
 
@@ -55,6 +65,8 @@
   transform-origin: 0 0;
   white-space: nowrap;
   line-height: 80px;
+  z-index: 10;
+  width: 0;
 }
 .sizes__item-description {
   background: rgba(51, 53, 55, 0.9);
