--- a/css/main.css
+++ b/css/main.css
@@ -1606,14 +1606,25 @@ ul, li {
 }
 
 .accordion__container {
+  position: relative;
   height: 100%;
   width: 100%;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
 }
+.accordion__container:after {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+}
 
 .accordion__slide-title {
+  position: absolute;
+  z-index: 10;
   margin-top: 115px;
   margin-left: 84px;
   font-weight: bold;
@@ -1628,6 +1639,7 @@ ul, li {
 }
 
 .accordion__slide-title-container {
+  position: relative;
   height: 100%;
   width: 50%;
 }
@@ -1674,10 +1686,17 @@ ul, li {
 }
 
 .sizes__item-title {
-  filter: brightness(20%);
   position: relative;
   min-width: 90px;
   height: 100%;
+}
+.sizes__item-title:after {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.55);
 }
 
 .sizes__item-title_milk {
@@ -1703,6 +1722,8 @@ ul, li {
   transform-origin: 0 0;
   white-space: nowrap;
   line-height: 80px;
+  z-index: 10;
+  width: 0;
 }
 
 .sizes__item-description {
